cloud/local/development/seaport/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaport-deployment
  namespace: seaport
  labels:
    app: seaport
spec:
  replicas: 0
  selector:
    matchLabels:
      app: seaport
  template:
    metadata:
      labels:
        app: seaport
    spec:
      serviceAccountName: seaport-admin
      containers:
        - name: seaport-container
          image: internal.io/seaport:1.0.1
          ports:
            - containerPort: 8080
