cloud/local/development/seaport/ext-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-ingress-service
  namespace: seaport
spec:
  type: ExternalName
  externalName: internal-ingress-service.ingress-nginx.svc.cluster.local
