cloud/local/development/seaport/ext-webdav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav-service
  namespace: seaport
spec:
  type: ExternalName
  externalName: webdav-service.webdav.svc.cluster.local
