cloud/local/development/seaport/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: seaport-service
  namespace: seaport
spec:
  selector:
    app: seaport
  ports:
    - port: 80
      targetPort: 8080
