cloud/local/development/seaport/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaport-ingress
  namespace: seaport
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /seaport(/|$)(.*)
            backend:
              service:
                name: seaport-service
                port:
                  number: 80
